--- a/.github/workflows/update_epg.yml
+++ b/.github/workflows/update_epg.yml
@@ -1,26 +1,25 @@
-name: Update EPG
+name: Update EPG XML
 
 on:
   schedule:
-    - cron: "0 */6 * * *"  # Pokreće se svakih 6 sati
-  workflow_dispatch:  # Omogućava ručno pokretanje
+    - cron: "0 * * * *"  # Pokreće se svakih sat vremena
+  workflow_dispatch: # Ručno pokretanje
 
 jobs:
-  update_epg:
+  update-epg:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Download new EPG file
-        run: wget -O epg.xml "https://epgshare01.online/epgshare01/epg.xml"
+      - name: Download latest EPG XML
+        run: wget -O epg.xml "http://sehara.eu/epgshare/epg.xml"
 
-      - name: Commit changes
+      - name: Commit and push if changed
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions@github.com"
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
           git add epg.xml
-          git commit -m "Automatsko ažuriranje EPG-a" || echo "Nema promjena za commit"
+          git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update epg.xml"
           git push
-
